FIX Refactor Code